Swap back to Java 8