@@ -5,6 +5,7 @@ import dev.rosewood.rosegarden.command.framework.ArgumentHandler;
 import dev.rosewood.rosegarden.command.framework.CommandContext;
 import dev.rosewood.rosegarden.command.framework.InputIterator;
 import dev.rosewood.rosegarden.utils.StringPlaceholders;
+import java.util.Collections;
 import java.util.List;
 
 public class LongArgumentHandler extends ArgumentHandler<Long> {
@@ -25,7 +26,7 @@ public class LongArgumentHandler extends ArgumentHandler<Long> {
 
     @Override
     public List<String> suggest(CommandContext context, Argument argument, String[] args) {
-        return List.of(argument.parameter());
+        return Collections.singletonList(argument.parameter());
     }
 
 }
